# decentralized-computing

./: .gitignore  README.md  avatars-draft.md  chord.md  distributed-systems-essay-draft.md  distributed-systems-essay.md  eigentrust.md  google-spanner.md  ipfs.md  kademlia.md  occult.md  ticketing-draft.md
blockchain/: Cargo.toml  README.md
blockchain/proto/: blockchain.proto
blockchain/src/: client.rs  server.rs
blockchain/src/blockchain/: block.rs  merkle.rs
merkletree/: README.md  go.mod  merkle_tree.go  merkle_tree_test.go
rustchain/: Cargo.toml  README.md
rustchain/proto/: blockchain.proto
rustchain/src/: lib.rs  protos.rs
rustchain/src/blockchain/: block.rs  blockchain.rs  merkle.rs  mine.rs  miner.rs  mod.rs  wallet.rs
rustchain/src/event_bus/: event_bus.rs  events.rs
rustchain/src/miner/: miner.rs
rustchain/src/net/: bootstrap_node.rs  client_stubs.rs  middleware.rs  mod.rs  networking.rs  p2p.rs  server_stubs.rs
rustchain/src/networking/: bootstrap_node.rs  client_stubs.rs  mod.rs  networking.rs  p2p.rs  server_stubs.rs
rustchain/src/utils/: concurrent_vec.rs  mod.rs
rustchain/tests/: mod.rs
rustchain/tests/net/: p2p.rs
rustchain/tests/networking/: mod.rs  p2p.rs  peer_services.rs
web3/: avatars-draft.md
white_papers/: chord.md  google-spanner.md  ipfs.md
