[package]
name = "grpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "blockchain-server"
path = "src/server.rs"

[[bin]]
name = "blockchain-client"
path = "src/client.rs"

[[bin]]
name = "blockchain-block"
path = "src/blockchain/block.rs"

[[bin]]
name = "merkle"
path = "src/blockchain/merkle.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10.6"
hex-literal = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.7"
